logs/tracking/build.make.575.log.stderr
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp: In function ‘Eigen::Matrix<float, 4, -1> initializeFilter(cv::Mat, Eigen::Matrix<float, 3, -1>)’:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:56:55: error: expression list treated as compound expression in initializer [-fpermissive]
  Eigen::Matrix<float,4,Eigen::Dynamic>& filter(4, size);
                                                       ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:56:55: warning: left operand of comma operator has no effect [-Wunused-value]
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:56:55: error: invalid initialization of reference of type ‘Eigen::Matrix<float, 4, -1>&’ from expression of type ‘int’
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:56:41: warning: unused variable ‘filter’ [-Wunused-variable]
  Eigen::Matrix<float,4,Eigen::Dynamic>& filter(4, size);
                                         ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:65:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
make[2]: *** [CMakeFiles/tracking.dir/src/DepthFilter.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
